# dlc-training-pipeline

./: .gitignore  README.md  convert_data.py  data.csv  data_missing_keypoints.csv  fix_h5.py  inference.py  init_project.py  pyproject.toml  run_training.py  setup_dataset.py  train.py  train_only.py
dlc_training/: README.md  __init__.py  __main__.py  analyzer.py  cli.py  config.py  dataset.py  evaluator.py  project.py  superanimal.py  trainer.py  utils.py  visualizer.py
dog_tracking-aru-2026-02-03/: config.yaml
dog_tracking-aru-2026-02-03/labeled-data/milo_15s/: CollectedData_aru.h5
dog_tracking-aru-2026-02-03/labeled-data/milo_15s/.ipynb_checkpoints/: CollectedData_aru-checkpoint.csv
rf_to_dlc/: README.md  __init__.py  __main__.py  annotation_parser.py  cli.py  config.py  data_formatter.py  downloader.py  file_manager.py  requirements.txt  utils.py  video_creator.py  visualizer.py
